# pdfGmbH

./: .gitignore  CMakeLists.txt  appState.h  cache.json  main.cpp  parsing
filesystem/: filesystem.h
include/: standard.h
include/objects/: PDFobject.cpp  PDFobject.h  ParentObject.cpp  ParentObject.h  cache.json  collection.cpp  collection.h
include/renderer/: cache.json  renderer.cpp  renderer.h
include/state/: cache.cpp  cache.h  cache.json  globals.cpp  globals.h  setup.cpp  setup.h
include/ui/: cache.json  infopanel.cpp  infopanel.h  mainwindow.h
renderer/: renderer.cpp  renderer.h
